<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_manager"
        android:textSize="40sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
android:textColor="@color/black"        />


    <TextView
        android:id="@+id/titleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="24sp"
        android:layout_below="@id/titleText"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleLabel"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_task_title"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <TextView
        android:id="@+id/descriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="24sp"
        android:layout_below="@id/titleEditText"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"    />

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/descriptionLabel"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_task_description"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <TextView
        android:id="@+id/timeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textSize="24sp"
        android:layout_below="@id/descriptionEditText"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"    />

    <EditText
        android:id="@+id/timeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/timeLabel"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_the_estimated_time_for_completion"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />


    <Button
        android:id="@+id/createTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_task"
        android:layout_below="@id/timeEditText"
        android:layout_centerHorizontal="true"
        android:padding="15dp"
        android:layout_marginTop="60dp"/>

    <Button
        android:id="@+id/viewHeapLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_layout"
        android:layout_below="@id/createTaskButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:padding="30dp"/>

</RelativeLayout>
</layout>